--- a/css/style.css
+++ b/css/style.css
@@ -103,4 +103,84 @@ h3 {
         float: none;
         margin: 0 auto;
      }
+
+    .picture{
+        width: 200px;
+    }
+
+     .description {
+        display: block;
+        text-align: left;
+        padding-top: 30px;
+        margin: 0 auto;
+     }
+
+     .description h3 {
+        text-align: center;
+     }
+}
+
+@media screen and (max-width: 466px) {
+
+    section {
+        padding: 10px;
+        height: 75vh;
+    }
+
+    .formContainer {
+        max-width: 80%;
+        height: 90%;
+
+    }
+
+    .formDetails {
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    input, select {
+        padding: 20px;
+    }
+    
+    .description {
+        max-width: 60%;
+    }
+    
+}
+
+@media screen and (max-width: 419px){
+    
+    .title {
+        font-size: 18px;
+    }
+
+    section {
+        padding: 0;
+        height: 80vh;
+    }
+
+    .formContainer {
+        max-width: 100%;
+        height: 100%;
+        border-radius: 0px;
+    }
+
+    .formDetails {
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    input, select {
+        padding: 15px;
+        margin-bottom: 15px; 
+    }
+    
+    h3 {
+        font-size: 20px;
+    }
+
+    .description {
+        text-align: center;
+        max-width: 200px;
+    }
 }
